--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "webpack serve --mode development",
     "build": "webpack --mode production",
     "deploy": "yarn build && cd dist && surge . example-modul323.surge.sh",
-    "test": "jest"
+    "test": "jest",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "browserslist": "> 0.25%, not dead",
   "author": "Patrick Michel",
@@ -16,6 +18,7 @@
     "@babel/preset-env": "^7.20.2",
     "babel-loader": "^9.1.0",
     "copy-webpack-plugin": "^11.0.0",
+    "cypress": "^13.2.0",
     "html-webpack-plugin": "^5.5.0",
     "hyperscript-helpers": "^3.0.3",
     "jest": "^29.6.4",
